# monad-blitz-medellin

./: .gitignore  ACLARACION_MAINNET_SISTECREDITO.md  ANALISIS_COMPLETO_Y_RECOMENDACIONES.md  ANALISIS_PROYECTO_VS_RUBRICAS.md  ANALISIS_RUBRICAS_COMPLETO.md  CHECKLIST_SISTECREDITO.md  CLAUDE.md  COMANDOS_GITHUB.md  COMANDOS_SUBIR_GITHUB.md  CONFIGURAR_GITHUB.md  DEPLOY_LOCAL.md  DESPLIEGUE_MAINNET.md  DESPLIEGUE_RAPIDO.md  GUIA_DESPLIEGUE.md  GUIA_GITHUB.md  GUIA_MAINNET.md  GUIA_RAPIDA_DESPLIEGUE.md  INICIO_FRONTEND.md  INICIO_RAPIDO.md  INSTRUCCIONES_FINALES.md  INSTRUCCIONES_GIT_MANUAL.md  INSTRUCCIONES_PARA_COLABORADOR.md  LOCALHOST_SETUP.md  MEJORAS_USUARIO_Y_EMPRESA.md  MONAD_CONFIG.md  MONAD_DESPLIEGUE_ESTADO.md  NEXT_STEPS.md  OBSERVACIONES_RUBRICAS.md  PROYECTO_SUBIDO.md  README.md  RECOMENDACIONES_ESTRATEGICAS_RUBRICAS.md  RESUMEN_EJECUTIVO_RUBRICAS.md  RESUMEN_FINAL.md  RESUMEN_GUARDAR_PROYECTO.md  RESUMEN_MEJORAS.md  SERVICIOS_DETENIDOS.md  SOLUCION_404.md  SOLUCION_PERMISOS_GIT.md  STATUS_MONAD.sh  SUBIR_A_GITHUB.ps1  (+5 more)
backend/: Dockerfile  database.py  env.example  main.py  pyproject.toml
backend/controller/: __init__.py  blockchain_controller.py  score_controller.py  user_controller.py
backend/models/: __init__.py  credit_score.py  user.py
backend/routers/: __init__.py  scores.py  users.py
backend/schemas/: __init__.py  score.py  user.py
business/: TRUSTLAYER_SKILL.md
contracts/: ._celo  Dockerfile  ENV_SETUP.md  env.example  hardhat.config.js  package-lock.json  package.json
demo/: app.js  index.html  landing.html  style.css
docs/: README.md  (+22 more)
(+88 files in other folders)
