[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "marker-pdf[full]>=1.10.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.4.0",
    "sqlalchemy>=2.0.0",
]
